plugins {
    id 'application'
}

group = 'uk.gemwire'
archivesBaseName = 'mcpconvert'
version = '0.1'

application {
    mainClassName = 'uk.gemwire.mcpconvert.Main'
    applicationDefaultJvmArgs += ["--enable-preview"]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(15)
    }
}

repositories {
    mavenCentral()
    jcenter()
    maven { url = 'https://files.minecraftforge.net/maven/' }
}

dependencies {
    implementation group: 'net.minecraftforge', name: 'srgutils', version: '0.3.0'
}

// Enable preview features, so we can have records and such

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}